# hithlain

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: add.hl
hithlain/: Cargo.toml
hithlain-bin/: Cargo.toml
hithlain-bin/src/: main.rs
hithlain-lsp/: Cargo.toml
hithlain-lsp/src/: main.rs
hithlain/src/: error.rs  fuzz.rs  grammar.bnf  lib.rs  time.rs
hithlain/src/parse/: ast.rs  desugar.rs  desugared_ast.rs  lexer.rs  mod.rs  parser.rs  scope.rs  source.rs  span.rs
hithlain/src/sim/: config.rs  instantiate.rs  instantiated_ast.rs  link.rs  linked_ast.rs  mod.rs  signal.rs  simulation.rs  value.rs
hithlain/src/vcd/: mod.rs  vcd_ast.rs
src/: lib.rs  time.rs  vcd.rs
src/parse/: ast.rs  desugar.rs  desugared_ast.rs  lexer.rs  parser.rs  scope.rs  source.rs  span.rs
src/sim/: instantiate.rs  instantiated_ast.rs  link.rs  linked_ast.rs  mod.rs  signal.rs  simulation.rs  value.rs
src/vcd/: vcd_ast.rs
